	PR c/64918 	* c.opt (Woverride-init-side-effects): New option.

* c-typeck.c (add_pending_init): Use OPT_Woverride_init_side_effects.
	(output_init_element): Likewise.

	* doc/invoke.texi: Document -Woverride-init-side-effects.

	* gcc.dg/Woverride-init-side-effects-1.c: New test.
	* gcc.dg/Woverride-init-side-effects-2.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@222894 138bc75d-0d04-0410-961f-82ee72b054a4